# FabricLive

./: README.md
media/app/: CMakeLists.txt  build.gradle
media/app/src/androidTest/java/cn/fabric/media/: ExampleInstrumentedTest.java
media/app/src/main/: AndroidManifest.xml
media/app/src/main/cpp/: Rtmp.cpp  Rtmp.h  Yuv420_Jni.cpp  media-native.cpp  speex_jni.cpp
media/app/src/main/java/cn/fabric/media/: AudioGatherer.java  Config.java  MainActivity.java  MediaEncoder.java  MediaJni.java  MediaPublisher.java  RtmpPublisher.java  Speex.java  StartActivity.java  VideoGatherer.java  Yuv420Util.java
media/app/src/main/java/cn/fabric/media/camera/: BitRateModeType.java  CameraType.java
media/app/src/main/java/cn/fabric/media/exception/: CrashHandler.java
media/app/src/main/java/cn/fabric/media/jni/: SpeexJni.java  Yuv420Jni.java
media/app/src/main/java/com/fabric/live/: CameraActivity.java  CameraStartActivity.java  CrashApplication.java  MainActivity.java  PlayerActivity.java
media/app/src/main/res/layout/: activity_camerastart.xml  activity_main.xml  activity_start.xml  activity_video_player.xml
media/app/src/main/res/values/: strings.xml
media/app/src/test/java/cn/fabric/media/: ExampleUnitTest.java
media/gradle/wrapper/: gradle-wrapper.properties
media/vitamio/: build.gradle
